--- a/Dashboard-Frontend/package.json
+++ b/Dashboard-Frontend/package.json
@@ -24,6 +24,7 @@
     "angular-oauth2-oidc": "^8.0.4",
     "bootstrap": "^4.4.1",
     "es6-promise": "^4.2.8",
+    "ngx-cookie-service": "^3.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
